# AutoDocking_Claude

./: .gitignore  pyproject.toml  requirements.txt  wizard.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-and-async-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-input-collection-ui/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-uspto-patent-search/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-epo-patent-search-and-filtering/: 04-01-PLAN.md  04-01-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Coding projects/AutoDocking_Claude/: INSTRUCTIONS.txt  Stephen_Docking.bat  requirements.txt  run_pipeline.py  test_hierarchical_e2e.py  test_mmp9_hierarchical.py  test_v092.py  test_v092_e2e.py  test_v093.py  web_app.py  wizard.py
Coding projects/PDF article manager/: .gitignore  pyproject.toml
Coding projects/PDF article manager/src/pdf_manager/: __init__.py  __main__.py  batch_client.py  classifier.py  cli.py  config.py  cost.py  extractor.py  heuristics.py  models.py  organizer.py  scanner.py  state.py  utils.py
autodock_pipeline/: __init__.py  config.py  pipeline.py
autodock_pipeline/core/: checkpoint.py  interactions.py  ligand.py  receptor.py
autodock_pipeline/stages/: __init__.py  backbone.py  minimize.py  sidechain.py
autodock_pipeline/utils/: __init__.py  io_utils.py  reporting.py
src/fto_agent/: __init__.py  __main__.py  app.py  main_window.py
tests/: __init__.py  test_epo_client.py  test_epo_worker.py  test_input_panel.py  test_keyword_extractor.py  test_legal_status.py  test_smiles_validator.py  test_unified_patent.py  test_uspto_client.py  test_uspto_worker.py  test_workers.py
(+48 files in other folders)
