[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fto-agent"
version = "0.1.0"
description = "Freedom-to-Operate patent search agent for cosmetic formulations"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "PySide6>=6.6",
    "rdkit>=2025.9.3",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-epo-ops-client>=4.0",  # EPO OPS API client with OAuth
    "lxml>=5.0",                    # XML parsing for EPO responses
    "defusedxml>=0.7",              # Secure XML parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]

[project.scripts]
fto-agent = "fto_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fto_agent"]
